// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots UI Elements/QuestionMarkTooltip Default 1`] = `
<h3
  className="inline-block mt-16"
>
  Here is a heading that needs some explaining
   
  <button
    aria-describedby="id-cvp0jk"
    onBlur={[Function]}
    onClickCapture={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPressCapture={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseDownCapture={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    tabIndex={0}
    type="button"
  >
     
    <div
      className="w-4 h-4 p-0 bg-gray-50 text-gray-500 border border-gray-500 rounded-full text-[10px] flex items-center justify-center transform -translate-y-0.5"
    >
      ?
    </div>
     
  </button>
  <div
    hidden={true}
    id="id-cvp0jk"
    onAnimationEnd={[Function]}
    onTransitionEnd={[Function]}
    role="tooltip"
    style={
      Object {
        "display": "none",
        "left": "100%",
        "pointerEvents": "none",
        "position": "fixed",
        "top": "100%",
      }
    }
  >
    <div
      className="max-w-sm py-3 px-4 text-xs bg-gray-900 text-white"
    >
      <div
        style={
          Object {
            "fontSize": 16,
            "height": "1em",
            "pointerEvents": "none",
            "top": "100%",
            "width": "1em",
          }
        }
      >
        <svg
          style={
            Object {
              "transform": "rotateZ(180deg)",
            }
          }
          viewBox="0 0 30 30"
        >
          <path
            className="stroke"
            d="M23.7,27.1L17,19.9C16.5,19.3,15.8,19,15,19s-1.6,0.3-2.1,0.9l-6.6,7.2C5.3,28.1,3.4,29,2,29h26 C26.7,29,24.6,28.1,23.7,27.1z"
          />
          <path
            className="fill"
            d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
          />
        </svg>
      </div>
      I am a tooltip, I explain things
    </div>
  </div>
</h3>
`;

exports[`Storyshots UI Elements/QuestionMarkTooltip Long Content 1`] = `
<h3
  className="inline-block mt-16"
>
  Here is a heading that needs some explaining
   
  <button
    aria-describedby="id-g0qktj"
    onBlur={[Function]}
    onClickCapture={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPressCapture={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseDownCapture={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    tabIndex={0}
    type="button"
  >
     
    <div
      className="w-4 h-4 p-0 bg-gray-50 text-gray-500 border border-gray-500 rounded-full text-[10px] flex items-center justify-center transform -translate-y-0.5"
    >
      ?
    </div>
     
  </button>
  <div
    hidden={true}
    id="id-g0qktj"
    onAnimationEnd={[Function]}
    onTransitionEnd={[Function]}
    role="tooltip"
    style={
      Object {
        "display": "none",
        "left": "100%",
        "pointerEvents": "none",
        "position": "fixed",
        "top": "100%",
      }
    }
  >
    <div
      className="max-w-sm py-3 px-4 text-xs bg-gray-900 text-white"
    >
      <div
        style={
          Object {
            "fontSize": 16,
            "height": "1em",
            "pointerEvents": "none",
            "top": "100%",
            "width": "1em",
          }
        }
      >
        <svg
          style={
            Object {
              "transform": "rotateZ(180deg)",
            }
          }
          viewBox="0 0 30 30"
        >
          <path
            className="stroke"
            d="M23.7,27.1L17,19.9C16.5,19.3,15.8,19,15,19s-1.6,0.3-2.1,0.9l-6.6,7.2C5.3,28.1,3.4,29,2,29h26 C26.7,29,24.6,28.1,23.7,27.1z"
          />
          <path
            className="fill"
            d="M23,27.8c1.1,1.2,3.4,2.2,5,2.2h2H0h2c1.7,0,3.9-1,5-2.2l6.6-7.2c0.7-0.8,2-0.8,2.7,0L23,27.8L23,27.8z"
          />
        </svg>
      </div>
      <div>
        <p>
          Hi there.
        </p>
        <p>
          I am also 
          <em>
            tooltip content
          </em>
          .
        </p>
        <p>
          Only this time with 
          <strong>
            more content 
          </strong>
           and using several DOM nodes as the content.
        </p>
      </div>
    </div>
  </div>
</h3>
`;
